--- a/css/util.css
+++ b/css/util.css
@@ -8,6 +8,7 @@
 .br-20{border-radius:20px;}
 .br-25{border-radius:25px;}
 
+.b-b{border-bottom:1px solid};
 
 
 /*[ FONT SIZE ]
@@ -2247,6 +2248,10 @@
 /* ------------------------------------ */
 .text-up {text-transform: uppercase;}
 
+
+/* ------------------------------------ */
+.bold {font-weight: bold};
+
 /* ------------------------------------ */
 .text-center {text-align: center;}
 .text-left {text-align: left;}
@@ -2274,6 +2279,10 @@
 .lh-2-7 {line-height: 2.7;}
 .lh-2-8 {line-height: 2.8;}
 .lh-2-9 {line-height: 2.9;}
+.lh-150 {height: 150px!important;}
+.lh-100 {height: 100px!important;}
+.lh-200 {height: 200px!important;}
+.lh-250 {height: 250px!important;}
 
 
 
